# NumCSJupyterNotebook

./: 2 Polynominterpolation.ipynb  3 Trigonometric Interpolation.ipynb  5 Quadratur.ipynb  Central Limit Theorem.ipynb  README.md  generate_pdf.py  pyproject.toml  requirements.txt
notebooks/: 2_Polynominterpolation.ipynb  5_Quadratur.ipynb
